--- a/src/App.scss
+++ b/src/App.scss
@@ -56,7 +56,7 @@ body {
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				gap: f.rem(15);
+				gap: f.rem(30);
 				a {
 					text-decoration: none;
 					color: var(--white);
@@ -177,6 +177,7 @@ body {
 						span {
 							font-size: $small-font;
 							font-weight: 400;
+							color: var(--dark-brown);
 						}
 					}
 					.left {
