--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,7 @@ body {
 		"aside footer footer";
 	grid-template-columns: f.rem(240) 1fr f.rem(240);
 	// grid-template-rows: 50px;
-	gap: f.rem(20);
+	gap: f.rem(5);
 
 	.header {
 		// height: fit-content;
@@ -43,6 +43,7 @@ body {
 		margin-bottom: f.rem(20);
 		position: sticky;
 		top: 0;
+		z-index: 99;
 		// background-color: var(--body-color);
 		background-color: hsla(260, 17%, 10%, 0.9);
 		backdrop-filter: saturate(50%) blur(20px);
@@ -90,7 +91,7 @@ body {
 			display: flex;
 			flex-direction: column;
 			gap: f.rem(30);
-			padding: f.rem(20) f.rem(20);
+			padding: f.rem(20) f.rem(10);
 			height: 100%;
 			.logo {
 				cursor: pointer;
@@ -104,7 +105,6 @@ body {
 				display: flex;
 				flex-direction: column;
 				height: f.rem(600);
-				// background-color: red;
 				gap: f.rem(30);
 				.first-nav {
 					position: relative;
@@ -177,7 +177,7 @@ body {
 						color: var(--white);
 						a {
 							h3 {
-								font-size: $font-medium;
+								font-size: f.rem(13);
 								font-weight: 400;
 								color: var(--white);
 							}
@@ -192,8 +192,8 @@ body {
 					}
 					.left {
 						.img {
-							width: f.rem(40);
-							height: f.rem(40);
+							width: f.rem(35);
+							height: f.rem(35);
 							object-fit: cover;
 							border-radius: 100%;
 							img {
@@ -223,12 +223,13 @@ body {
 // ============main==============
 
 .main {
-	background-color: gray;
 	height: 100%;
 	display: grid;
+	gap: f.rem(20);
 	grid-template-columns: 1fr;
 	grid-template-rows: 350px 250px 250px auto;
-	// flex-direction: column;
+	margin-left: f.rem(20);
+	user-select: none;
 }
 
 .trending-section,
@@ -237,16 +238,39 @@ body {
 	width: 100%;
 }
 
-// .trending-section {
-// 	flex: 5;
-// }
 .top-rated-section {
 	background-color: blue;
-	// flex: 2;
 }
 .continueWatching-section {
 	background-color: purple;
-	// flex: 2;
+}
+
+.trending-section {
+	h2 {
+		margin-bottom: f.rem(20);
+		color: var(--white);
+		font-weight: 400;
+	}
+	overflow: hidden;
+	.swiper-container {
+		height: 100%;
+		.swiper-card {
+			max-width: f.rem(550);
+			margin-inline: auto;
+			width: 100%;
+			border-radius: f.rem(25);
+			&:hover {
+				cursor: grab;
+			}
+			img {
+				border-radius: f.rem(25);
+				// height: 100%;
+				width: 100%;
+				height: f.rem(300);
+				object-fit: cover;
+			}
+		}
+	}
 }
 // .footer {
 // 	flex: 1;
