--- a/src/App.scss
+++ b/src/App.scss
@@ -37,18 +37,14 @@ body {
 		"aside main main"
 		"aside footer footer";
 	grid-template-columns: f.rem(240) 1fr f.rem(240);
-	// grid-template-rows: 50px;
-	gap: f.rem(5);
 
 	.header {
-		// height: fit-content;
 		height: 100%;
 		grid-area: header;
 		margin-bottom: f.rem(20);
 		position: sticky;
 		top: 0;
 		z-index: 99;
-		// background-color: var(--body-color);
 		background-color: hsla(260, 17%, 10%, 0.9);
 		backdrop-filter: saturate(50%) blur(20px);
 		-webkit-backdrop-filter: saturate(50%) blur(8px);
@@ -85,13 +81,14 @@ body {
 	}
 	.aside {
 		grid-area: aside;
-		// background-color: red;
 		position: sticky;
 		top: f.rem(0);
 		left: 0;
 		width: f.rem(240);
 		height: 100vh;
+		box-shadow: 1rem 0 1rem -1rem rgba(0, 0, 0, 0.3);
 		.container {
+			width: 100%;
 			display: flex;
 			flex-direction: column;
 			gap: f.rem(30);
@@ -232,7 +229,6 @@ body {
 	gap: f.rem(20);
 	grid-template-columns: 1fr;
 	grid-template-rows: repeat(3, 1fr) auto;
-	margin-left: f.rem(20);
 	user-select: none;
 }
 
@@ -254,6 +250,7 @@ body {
 		margin-bottom: f.rem(20);
 		color: var(--white);
 		font-weight: 400;
+		margin-left: f.rem(23);
 	}
 	overflow: hidden;
 	.swiper-container {
@@ -372,6 +369,3 @@ body {
 		}
 	}
 }
-// .footer {
-// 	flex: 1;
-// }
