--- a/src/App.scss
+++ b/src/App.scss
@@ -475,3 +475,27 @@ body {
 		}
 	}
 }
+
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100%;
+	color: white;
+	font-size: 8rem;
+	z-index: 100;
+	background-color: #020005bb;
+	display: grid;
+	place-content: center;
+	.trailer {
+		height: 100%;
+		user-select: text;
+		.close {
+			display: flex;
+			align-items: center;
+			margin-left: auto;
+			margin-bottom: f.rem(20);
+		}
+	}
+}
