--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,7 @@ p {
 	--dark-brown: #6d6a70;
 	--light-blue: #6780c0;
 	--blue: #123996;
+	--filter: hsla(260, 18%, 10%, 0.993);
 }
 
 $small-font: f.rem(12);
@@ -52,11 +53,16 @@ body {
 		"aside footer footer";
 	grid-template-columns: f.rem(240) auto f.rem(240);
 	@include breakpoint-max(medium) {
+		grid-template-areas:
+			"header header header"
+			"main main main"
+			"main main main"
+			"footer footer footer";
 		grid-template-columns: f.rem(180) auto f.rem(240);
 	}
-	@include breakpoint-max(small-m) {
-		grid-template-columns: f.rem(80) auto f.rem(240); //changed this
-	}
+	// @include breakpoint-max(small-m) {
+	// 	grid-template-columns: f.rem(80) auto f.rem(240); //changed this
+	// }
 
 	.header {
 		height: 100%;
@@ -65,7 +71,7 @@ body {
 		position: sticky;
 		top: 0;
 		z-index: 99;
-		background-color: hsla(260, 17%, 10%, 0.9);
+		background-color: var(--filter);
 		backdrop-filter: saturate(50%) blur(20px);
 		-webkit-backdrop-filter: saturate(50%) blur(8px);
 		.container {
@@ -106,7 +112,9 @@ body {
 		left: 0;
 		height: 100vh;
 		box-shadow: 1rem 0 1rem -1rem rgba(0, 0, 0, 0.3);
-
+		@include breakpoint-max(medium) {
+			display: none;
+		}
 		.container {
 			width: 100%;
 			display: flex;
@@ -337,11 +345,12 @@ body {
 			display: grid;
 			overflow: hidden;
 			width: 100%;
-			max-width: f.rem(550);
+			max-width: f.rem(450);
 			margin-inline: auto;
 			border-radius: f.rem(25);
 			height: fit-content;
 			position: relative;
+
 			&:hover {
 				cursor: grab;
 			}
@@ -390,13 +399,13 @@ body {
 					h3 {
 						margin-bottom: f.rem(10);
 						font-size: f.rem(25);
-						@include breakpoint-max(small) {
-							display: none;
-						}
-						@include breakpoint-max(v-small) {
-							display: grid;
-							font-size: f.rem(20);
-						}
+						// @include breakpoint-max(small) {
+						// 	display: none;
+						// }
+						// @include breakpoint-max(v-small) {
+						// 	display: grid;
+						// 	font-size: f.rem(20);
+						// }
 					}
 					span {
 						font-weight: 600;
@@ -406,9 +415,9 @@ body {
 						font-weight: 300;
 						font-size: f.rem(13);
 						line-height: 1.4;
-						@include breakpoint-max(v-small) {
-							display: none;
-						}
+						// @include breakpoint-max(v-small) {
+						// 	display: none;
+						// }
 					}
 					.attr {
 						margin-top: f.rem(7);
@@ -504,4 +513,145 @@ body {
 
 .slider {
 	width: 100%;
+}
+
+// =============sidebar============
+
+.sidebar {
+	width: f.rem(200);
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 70%;
+	overflow: hidden;
+	background-color: var(--filter);
+	backdrop-filter: saturate(50%) blur(20px);
+	-webkit-backdrop-filter: saturate(50%) blur(8px);
+	.container {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		gap: f.rem(30);
+		padding: f.rem(20) f.rem(10);
+		height: 100%;
+		.logo {
+			cursor: pointer;
+			display: flex;
+			align-items: center;
+			justify-content: flex-start;
+			h1 {
+				font-weight: 600;
+				color: var(--white);
+			}
+		}
+		.nav_links {
+			margin-top: f.rem(30);
+			display: flex;
+			flex-direction: column;
+			height: f.rem(600);
+			gap: f.rem(30);
+			.first-nav {
+				position: relative;
+				&::before {
+					content: "";
+					position: absolute;
+					bottom: f.rem(-15);
+					left: 0;
+					width: 100%;
+					height: f.rem(1);
+					background-color: var(--dark-brown);
+					opacity: 0.3;
+				}
+			}
+			h2 {
+				font-weight: 400;
+				font-size: $small-font;
+				color: var(--dark-brown);
+				margin-bottom: f.rem(5);
+			}
+			nav {
+				display: flex;
+				flex-direction: column;
+				gap: f.rem(10);
+				a {
+					display: flex;
+					align-items: center;
+					gap: f.rem(7);
+					cursor: pointer;
+					text-decoration: none;
+					color: var(--dark-brown);
+					&.active {
+						border-left: f.rem(2) solid var(--light-blue);
+					}
+					svg {
+						margin-left: f.rem(10);
+						svg {
+							width: f.rem(25);
+							height: f.rem(25);
+						}
+					}
+					&:hover {
+						color: var(--white);
+						transition: 0.3s ease;
+						svg {
+							fill: var(--light-blue);
+						}
+					}
+					a {
+						color: var(--dark-brown);
+						text-decoration: none;
+						cursor: pointer;
+						font-weight: 500;
+					}
+				}
+			}
+			.userLogged {
+				display: flex;
+				align-items: center;
+				justify-content: flex-start;
+				max-width: f.rem(200);
+				width: 100%;
+				gap: f.rem(11);
+				position: relative;
+				bottom: 0;
+				margin-top: auto;
+				margin-bottom: f.rem(30);
+				a {
+					color: var(--white);
+					cursor: pointer;
+				}
+
+				.right {
+					color: var(--white);
+					a {
+						h3 {
+							font-size: f.rem(13);
+							font-weight: 400;
+							color: var(--white);
+						}
+						cursor: pointer;
+						text-decoration: none;
+					}
+					span {
+						font-size: $small-font;
+						font-weight: 400;
+						color: var(--dark-brown);
+					}
+				}
+				.left {
+					.img {
+						width: f.rem(35);
+						height: f.rem(35);
+						object-fit: cover;
+						border-radius: 100%;
+						img {
+							border-radius: 100%;
+							width: 100%;
+							height: 100%;
+						}
+					}
+				}
+			}
+		}
+	}
 }
