--- a/src/App.scss
+++ b/src/App.scss
@@ -60,9 +60,6 @@ body {
 			"footer footer footer";
 		grid-template-columns: f.rem(180) auto f.rem(240);
 	}
-	// @include breakpoint-max(small-m) {
-	// 	grid-template-columns: f.rem(80) auto f.rem(240); //changed this
-	// }
 
 	.header {
 		height: 100%;
@@ -74,12 +71,19 @@ body {
 		background-color: var(--filter);
 		backdrop-filter: saturate(50%) blur(20px);
 		-webkit-backdrop-filter: saturate(50%) blur(8px);
+
 		.container {
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
 			padding: f.rem(20) f.rem(20) f.rem(20) f.rem(15);
 			height: 100%;
+			.menu {
+				display: none;
+				@include breakpoint-max(medium) {
+					display: flex;
+				}
+			}
 			a {
 				cursor: pointer;
 				&:hover {
@@ -299,7 +303,6 @@ body {
 	display: grid;
 	gap: f.rem(20);
 	grid-template-columns: 1fr;
-	// grid-template-rows: repeat(3, 1fr) auto;
 	grid-template-rows: repeat(3, auto) 400px;
 	user-select: none;
 }
@@ -399,13 +402,6 @@ body {
 					h3 {
 						margin-bottom: f.rem(10);
 						font-size: f.rem(25);
-						// @include breakpoint-max(small) {
-						// 	display: none;
-						// }
-						// @include breakpoint-max(v-small) {
-						// 	display: grid;
-						// 	font-size: f.rem(20);
-						// }
 					}
 					span {
 						font-weight: 600;
@@ -415,9 +411,6 @@ body {
 						font-weight: 300;
 						font-size: f.rem(13);
 						line-height: 1.4;
-						// @include breakpoint-max(v-small) {
-						// 	display: none;
-						// }
 					}
 					.attr {
 						margin-top: f.rem(7);
@@ -432,51 +425,49 @@ body {
 							border-radius: f.rem(3);
 							// width: fit-content;
 						}
-						@include breakpoint-max(small) {
-							display: none;
+						display: none;
+					}
+				}
+				.buttons {
+					margin-top: f.rem(20);
+					display: flex;
+					align-items: center;
+					justify-content: flex-start;
+					gap: f.rem(20);
+					width: 100%;
+					@include breakpoint-max(small) {
+						flex-direction: column;
+						gap: f.rem(10);
+						align-items: flex-start;
+					}
+					button {
+						cursor: pointer;
+						padding: f.rem(9);
+						color: var(--white);
+						border-radius: f.rem(10);
+						border: none;
+						font-size: f.rem(15);
+						&:hover {
+							opacity: 0.86;
+							transition: opacity 0.2s ease;
+						}
+
+						&:active {
+							opacity: 1;
+							transition: opacity 0.2s ease;
+							transform: scale(0.96);
 						}
 					}
-					.buttons {
-						margin-top: f.rem(20);
-						display: flex;
-						align-items: center;
-						justify-content: flex-start;
-						gap: f.rem(20);
-						width: 100%;
-						@include breakpoint-max(small) {
-							flex-direction: column;
-							gap: f.rem(10);
-							align-items: flex-start;
+					.watch {
+						background-color: var(--blue);
+						@include breakpoint-max(v-small) {
+							font-size: f.rem(12);
 						}
-						button {
-							cursor: pointer;
-							padding: f.rem(9);
-							color: var(--white);
-							border-radius: f.rem(10);
-							border: none;
-							font-size: f.rem(15);
-							&:hover {
-								opacity: 0.86;
-								transition: opacity 0.2s ease;
-							}
-
-							&:active {
-								opacity: 1;
-								transition: opacity 0.2s ease;
-								transform: scale(0.96);
-							}
-						}
-						.watch {
-							background-color: var(--blue);
-							@include breakpoint-max(v-small) {
-								font-size: f.rem(12);
-							}
-						}
-						.trailer {
-							background-color: rgba(255, 255, 255, 0.411);
-							@include breakpoint-max(v-small) {
-								display: none;
-							}
+					}
+					.trailer {
+						background-color: rgba(255, 255, 255, 0.411);
+						@include breakpoint-max(v-small) {
+							display: none;
 						}
 					}
 				}
@@ -516,138 +507,144 @@ body {
 }
 
 // =============sidebar============
-
 .sidebar {
-	width: f.rem(200);
-	position: fixed;
-	top: 0;
-	right: 0;
-	width: 70%;
-	overflow: hidden;
-	background-color: var(--filter);
-	backdrop-filter: saturate(50%) blur(20px);
-	-webkit-backdrop-filter: saturate(50%) blur(8px);
-	.container {
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		gap: f.rem(30);
-		padding: f.rem(20) f.rem(10);
-		height: 100%;
-		.logo {
-			cursor: pointer;
-			display: flex;
-			align-items: center;
-			justify-content: flex-start;
-			h1 {
-				font-weight: 600;
-				color: var(--white);
-			}
-		}
-		.nav_links {
-			margin-top: f.rem(30);
+	display: none;
+}
+
+@include breakpoint-max(medium) {
+	.sidebar {
+		width: f.rem(200);
+		position: fixed;
+		top: 0;
+		right: 0;
+		width: 70%;
+		height: 100vh;
+		overflow: hidden;
+		background-color: var(--filter);
+		backdrop-filter: saturate(50%) blur(20px);
+		-webkit-backdrop-filter: saturate(50%) blur(8px);
+		.container {
+			width: 100%;
 			display: flex;
 			flex-direction: column;
-			height: f.rem(600);
 			gap: f.rem(30);
-			.first-nav {
-				position: relative;
-				&::before {
-					content: "";
-					position: absolute;
-					bottom: f.rem(-15);
-					left: 0;
-					width: 100%;
-					height: f.rem(1);
-					background-color: var(--dark-brown);
-					opacity: 0.3;
-				}
-			}
-			h2 {
-				font-weight: 400;
-				font-size: $small-font;
-				color: var(--dark-brown);
-				margin-bottom: f.rem(5);
-			}
-			nav {
-				display: flex;
-				flex-direction: column;
-				gap: f.rem(10);
-				a {
-					display: flex;
-					align-items: center;
-					gap: f.rem(7);
-					cursor: pointer;
-					text-decoration: none;
-					color: var(--dark-brown);
-					&.active {
-						border-left: f.rem(2) solid var(--light-blue);
-					}
-					svg {
-						margin-left: f.rem(10);
-						svg {
-							width: f.rem(25);
-							height: f.rem(25);
-						}
-					}
-					&:hover {
-						color: var(--white);
-						transition: 0.3s ease;
-						svg {
-							fill: var(--light-blue);
-						}
-					}
-					a {
-						color: var(--dark-brown);
-						text-decoration: none;
-						cursor: pointer;
-						font-weight: 500;
-					}
-				}
-			}
-			.userLogged {
+			padding: f.rem(20) f.rem(10);
+			height: 100%;
+			.logo {
+				cursor: pointer;
 				display: flex;
 				align-items: center;
 				justify-content: flex-start;
-				max-width: f.rem(200);
-				width: 100%;
-				gap: f.rem(11);
-				position: relative;
-				bottom: 0;
-				margin-top: auto;
-				margin-bottom: f.rem(30);
-				a {
+				h1 {
+					font-weight: 600;
 					color: var(--white);
-					cursor: pointer;
 				}
-
-				.right {
-					color: var(--white);
+			}
+			.nav_links {
+				margin-top: f.rem(30);
+				display: flex;
+				flex-direction: column;
+				height: f.rem(600);
+				gap: f.rem(30);
+				.first-nav {
+					position: relative;
+					&::before {
+						content: "";
+						position: absolute;
+						bottom: f.rem(-15);
+						left: 0;
+						width: 100%;
+						height: f.rem(1);
+						background-color: var(--dark-brown);
+						opacity: 0.3;
+					}
+				}
+				h2 {
+					font-weight: 400;
+					font-size: $small-font;
+					color: var(--dark-brown);
+					margin-bottom: f.rem(5);
+				}
+				nav {
+					display: flex;
+					flex-direction: column;
+					gap: f.rem(10);
 					a {
-						h3 {
-							font-size: f.rem(13);
-							font-weight: 400;
-							color: var(--white);
-						}
+						display: flex;
+						align-items: center;
+						gap: f.rem(7);
 						cursor: pointer;
 						text-decoration: none;
-					}
-					span {
-						font-size: $small-font;
-						font-weight: 400;
 						color: var(--dark-brown);
+						&.active {
+							border-left: f.rem(2) solid var(--light-blue);
+						}
+						svg {
+							margin-left: f.rem(10);
+							svg {
+								width: f.rem(25);
+								height: f.rem(25);
+							}
+						}
+						&:hover {
+							color: var(--white);
+							transition: 0.3s ease;
+							svg {
+								fill: var(--light-blue);
+							}
+						}
+						a {
+							color: var(--dark-brown);
+							text-decoration: none;
+							cursor: pointer;
+							font-weight: 500;
+						}
 					}
 				}
-				.left {
-					.img {
-						width: f.rem(35);
-						height: f.rem(35);
-						object-fit: cover;
-						border-radius: 100%;
-						img {
+				.userLogged {
+					display: flex;
+					align-items: center;
+					justify-content: flex-start;
+					max-width: f.rem(200);
+					width: 100%;
+					gap: f.rem(11);
+					position: relative;
+					bottom: 0;
+					margin-top: auto;
+					margin-bottom: f.rem(30);
+					a {
+						color: var(--white);
+						cursor: pointer;
+					}
+
+					.right {
+						color: var(--white);
+						a {
+							h3 {
+								font-size: f.rem(13);
+								font-weight: 400;
+								color: var(--white);
+							}
+							cursor: pointer;
+							text-decoration: none;
+						}
+						span {
+							font-size: $small-font;
+							font-weight: 400;
+							color: var(--dark-brown);
+						}
+					}
+					.left {
+						.img {
+							width: f.rem(35);
+							height: f.rem(35);
+							object-fit: cover;
 							border-radius: 100%;
-							width: 100%;
-							height: 100%;
+							img {
+								border-radius: 100%;
+								width: 100%;
+								height: 100%;
+							}
 						}
 					}
 				}
