--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ p {
 :root {
 	--body-color: #19161f;
 	--white: white;
+	--white2: white;
 	--dark-brown: #6d6a70;
 	--light-blue: #6780c0;
 	--blue: #123996;
@@ -22,8 +23,21 @@ p {
 	--scrollbar2: purple;
 }
 
+.lightMode {
+	--body-color: #fff;
+	--white: #000;
+	--white2: #fff;
+	// --dark-brown: #000;
+	// --light-blue: #6780c0;
+	// --blue: #123996;
+	--filter: hsla(0, 0%, 100%, 0.993);
+	// --scrollbar: blue;
+	// --scrollbar2: purple;
+}
+
 $small-font: f.rem(12);
 $font-medium: f.rem(15);
+$font-large: f.rem(25);
 
 $breakpoints: (
 	v-small: f.rem(450),
@@ -90,6 +104,7 @@ body {
 		background-color: var(--filter);
 		backdrop-filter: saturate(50%) blur(20px);
 		-webkit-backdrop-filter: saturate(50%) blur(8px);
+		box-shadow: 0px 1rem 1rem -1rem rgba(0, 0, 0, 0.2);
 
 		.container {
 			display: flex;
@@ -102,6 +117,15 @@ body {
 				@include breakpoint-max(medium) {
 					display: flex;
 				}
+			}
+
+			.notify {
+				margin-left: auto;
+				margin-right: f.rem(20);
+			}
+
+			.theme {
+				cursor: pointer;
 			}
 			a {
 				cursor: pointer;
@@ -134,7 +158,8 @@ body {
 		top: f.rem(0);
 		left: 0;
 		height: 100vh;
-		box-shadow: 1rem 0 1rem -1rem rgba(0, 0, 0, 0.3);
+		box-shadow: 0px 1rem 2rem -1rem rgba(0, 0, 0, 0.1);
+
 		@include breakpoint-max(medium) {
 			display: none;
 		}
@@ -197,10 +222,6 @@ body {
 						}
 						svg {
 							margin-left: f.rem(10);
-							svg {
-								width: f.rem(25);
-								height: f.rem(25);
-							}
 						}
 						&:hover {
 							color: var(--white);
@@ -342,11 +363,13 @@ body {
 
 .trending-section {
 	position: relative;
+	margin-top: f.rem(20);
 	h2 {
-		margin-bottom: f.rem(20);
+		margin-bottom: f.rem(30);
 		color: var(--white);
 		font-weight: 400;
 		margin-left: f.rem(23);
+		font-size: $font-large;
 	}
 	.error {
 		color: rgba(255, 0, 0, 0.89);
@@ -373,6 +396,7 @@ body {
 			border-radius: f.rem(25);
 			height: fit-content;
 			position: relative;
+			box-shadow: 0px 1rem 2rem -1rem rgba(0, 0, 0, 0.2);
 
 			&:hover {
 				cursor: grab;
@@ -416,7 +440,7 @@ body {
 					}
 				}
 				.right {
-					color: var(--white);
+					color: var(--white2);
 					display: grid;
 					place-content: center;
 					h3 {
@@ -463,7 +487,7 @@ body {
 					button {
 						cursor: pointer;
 						padding: f.rem(10) f.rem(15);
-						color: var(--white);
+						color: var(--white2);
 						border-radius: f.rem(10);
 						border: none;
 						font-size: f.rem(15);
@@ -493,7 +517,7 @@ body {
 	left: 0;
 	height: 100vh;
 	width: 100%;
-	color: white;
+	color: var(--white);
 	font-size: 8rem;
 	z-index: 100;
 	background-color: #020005da;
