--- a/src/App.scss
+++ b/src/App.scss
@@ -390,9 +390,9 @@ body {
 		.swiper-card {
 			display: grid;
 			overflow: hidden;
-			width: 100%;
-			max-width: f.rem(450);
 			margin-inline: auto;
+			max-width: f.rem(450); //remove this line
+			width: 100%;
 			border-radius: f.rem(25);
 			height: fit-content;
 			position: relative;
@@ -455,6 +455,7 @@ body {
 						font-weight: 300;
 						font-size: f.rem(13);
 						line-height: 1.4;
+						max-width: f.rem(350);
 					}
 					.attr {
 						margin-top: f.rem(7);
