--- a/src/App.scss
+++ b/src/App.scss
@@ -112,6 +112,9 @@ body {
 			justify-content: space-between;
 			padding: f.rem(20) f.rem(20) f.rem(20) f.rem(15);
 			height: 100%;
+			@include breakpoint-max(medium) {
+				padding: f.rem(10) f.rem(20) f.rem(10) f.rem(15);
+			}
 			.menu {
 				display: none;
 				@include breakpoint-max(medium) {
@@ -390,8 +393,6 @@ body {
 		.swiper-card {
 			display: grid;
 			overflow: hidden;
-			margin-inline: auto;
-			max-width: f.rem(450); //remove this line
 			width: 100%;
 			border-radius: f.rem(25);
 			height: fit-content;
