--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,7 @@ p {
 	--filter: hsla(260, 18%, 10%, 0.993);
 	--scrollbar: blue;
 	--scrollbar2: purple;
+	--loading: purple;
 }
 
 .lightMode {
@@ -31,13 +32,13 @@ p {
 	// --light-blue: #6780c0;
 	// --blue: #123996;
 	--filter: hsla(0, 0%, 100%, 0.993);
-	// --scrollbar: blue;
-	// --scrollbar2: purple;
+	--loading: blue;
 }
 
 $small-font: f.rem(12);
 $font-medium: f.rem(15);
 $font-large: f.rem(25);
+$font-larger: f.rem(30);
 
 $breakpoints: (
 	v-small: f.rem(450),
@@ -73,6 +74,11 @@ body {
 	&::-webkit-scrollbar-track {
 		background-color: var(--filter);
 	}
+}
+
+.loading {
+	color: var(--loading);
+	font-weight: 400;
 }
 
 .container {
@@ -357,8 +363,81 @@ body {
 	width: 100%;
 }
 
+// ========top-rated=============
 .top-rated-section {
-	background-color: blue;
+	margin-top: f.rem(60);
+	.container {
+		display: flex;
+		flex-direction: column;
+		width: (100% - f.rem(20), f.rem(1200));
+		margin-inline: auto;
+		h2 {
+			margin-bottom: f.rem(30);
+			color: var(--white);
+			font-weight: 400;
+			margin-left: f.rem(25);
+			font-size: $font-larger;
+			@include breakpoint-max(v-small) {
+				font-size: $font-large;
+			}
+		}
+		.top-rated-container {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(f.rem(200), 1fr));
+			gap: f.rem(20);
+			margin-bottom: f.rem(50);
+			.movie {
+				border-radius: f.rem(20);
+				height: f.rem(350);
+				overflow: hidden;
+				position: relative;
+				&:hover {
+					cursor: pointer;
+					p {
+						visibility: visible;
+						opacity: 1;
+					}
+				}
+
+				img {
+					border-radius: f.rem(20);
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+				p {
+					position: absolute;
+					top: 0;
+					height: 100%;
+					width: 100%;
+					color: white;
+					display: grid;
+					place-content: center;
+					font-weight: 400;
+					font-size: f.rem(25);
+					padding-inline: 2rem;
+					text-align: center;
+					opacity: 0;
+					visibility: hidden;
+					background: linear-gradient(
+						rgba(0, 0, 255, 0.725),
+						rgba(128, 0, 128, 0.727)
+					);
+					transition: 0.3s ease-in-out;
+				}
+			}
+		}
+		button {
+			max-width: f.rem(200);
+			width: 100%;
+			margin-inline: auto;
+			padding: f.rem(15) f.rem(20);
+			&:active {
+				transform: scale(0.8);
+				transition: 0.1s ease;
+			}
+		}
+	}
 }
 .continueWatching-section {
 	background-color: purple;
@@ -368,10 +447,14 @@ body {
 	position: relative;
 	margin-top: f.rem(20);
 	h2 {
+		margin-left: f.rem(25);
 		margin-bottom: f.rem(30);
 		color: var(--white);
 		font-weight: 400;
-		margin-left: f.rem(23);
+		font-size: $font-larger;
+		@include breakpoint-max(v-small) {
+			font-size: $font-large;
+		}
 		font-size: $font-large;
 	}
 	.error {
@@ -446,7 +529,7 @@ body {
 					place-content: center;
 					h3 {
 						margin-bottom: f.rem(10);
-						font-size: f.rem(25);
+						font-size: $font-large;
 					}
 					span {
 						font-weight: 600;
