--- a/src/App.scss
+++ b/src/App.scss
@@ -488,6 +488,112 @@ body {
 			// position: relative;
 			box-shadow: 0px 1rem 2rem -1rem rgba(0, 0, 0, 0.2);
 
+			.onCard {
+				padding: f.rem(20) f.rem(20) f.rem(20) f.rem(35);
+				display: grid;
+				grid-template-columns: auto auto;
+				place-content: center;
+				width: 100%;
+				position: absolute;
+				gap: f.rem(30);
+				margin-inline: auto;
+				top: 0;
+				left: 0;
+				height: 100%;
+				background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6));
+
+				.left {
+					width: fit-content;
+					.img {
+						border-radius: f.rem(25);
+						height: 100%;
+						width: f.rem(170);
+						img {
+							border-radius: f.rem(25);
+							width: 100%;
+							height: 100%;
+							object-fit: cover;
+						}
+						@include breakpoint-max(small) {
+							width: f.rem(100);
+						}
+					}
+				}
+				.right {
+					color: var(--white2);
+					display: grid;
+					place-content: center;
+					h3 {
+						margin-bottom: f.rem(10);
+						font-size: $font-large;
+					}
+					span {
+						font-weight: 600;
+						margin-bottom: f.rem(8);
+					}
+					p {
+						font-weight: 300;
+						font-size: f.rem(13);
+						line-height: 1.4;
+						max-width: f.rem(350);
+					}
+					.attr {
+						margin-top: f.rem(7);
+						font-weight: 400;
+						font-size: f.rem(12);
+						display: flex;
+						align-items: center;
+						gap: f.rem(8);
+						span {
+							background-color: rgba(255, 255, 255, 0.301);
+							padding: f.rem(5);
+							border-radius: f.rem(3);
+							// width: fit-content;
+						}
+						display: none;
+					}
+				}
+				.buttons {
+					margin-top: f.rem(20);
+					display: flex;
+					align-items: center;
+					justify-content: flex-start;
+					gap: f.rem(20);
+					width: 100%;
+					@include breakpoint-max(small) {
+						flex-direction: column;
+						gap: f.rem(10);
+						align-items: flex-start;
+					}
+					button {
+						cursor: pointer;
+						padding: f.rem(12) f.rem(20);
+						color: var(--white2);
+						border-radius: f.rem(10);
+						border: none;
+						font-size: f.rem(15);
+						transition: 0.3s ease;
+						&:hover,
+						&:active {
+							opacity: 0.86;
+							transition: opacity 0.2s ease;
+						}
+
+						&:active {
+							opacity: 1;
+							transition: opacity 0.2s ease;
+							transform: scale(0.96);
+						}
+					}
+					.trailer {
+						background-color: var(--scrollbar3);
+						&:hover {
+							transform: scale(1.03);
+						}
+					}
+				}
+			}
+
 			&:hover {
 				cursor: grab;
 			}
