--- a/src/App.scss
+++ b/src/App.scss
@@ -484,23 +484,24 @@ body {
 			width: 80%;
 			margin-inline: auto;
 			border-radius: f.rem(25);
-			// height: fit-content;
-			// position: relative;
+			height: fit-content;
 			box-shadow: 0px 1rem 2rem -1rem rgba(0, 0, 0, 0.2);
-
+			position: relative;
+			overflow: hidden;
 			.onCard {
 				padding: f.rem(20) f.rem(20) f.rem(20) f.rem(35);
 				display: grid;
+				border-radius: f.rem(25);
 				grid-template-columns: auto auto;
 				place-content: center;
 				width: 100%;
 				position: absolute;
+				inset: 0;
+				top: f.rem(-3);
 				gap: f.rem(30);
 				margin-inline: auto;
-				top: 0;
-				left: 0;
 				height: 100%;
-				background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6));
+				background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6));
 
 				.left {
 					width: fit-content;
