--- a/src/App.scss
+++ b/src/App.scss
@@ -101,6 +101,13 @@ body {
 			"main main main"
 			"footer footer footer";
 	}
+	@include breakpoint-max(small) {
+		grid-template-areas: "header", "main", "footer";
+		grid-template-columns: 1fr;
+		width: 98%;
+
+		margin-inline: auto;
+	}
 
 	.header {
 		height: 100%;
@@ -125,7 +132,7 @@ body {
 			height: 100%;
 			width: 100%;
 			@include breakpoint-max(medium) {
-				padding: f.rem(10) f.rem(20) f.rem(10) f.rem(15);
+				padding: f.rem(14) f.rem(20) f.rem(14) f.rem(15);
 			}
 			.menu {
 				display: none;
@@ -168,6 +175,11 @@ body {
 						transition: 0.3s ease;
 					}
 				}
+			}
+			.group-icons {
+				display: flex;
+				align-items: center;
+				gap: f.rem(15);
 			}
 		}
 	}
@@ -443,6 +455,9 @@ body {
 			margin-bottom: f.rem(30);
 			.movie {
 				max-width: f.rem(400);
+				@include breakpoint-max(small) {
+					max-width: 100%;
+				}
 				margin-inline: auto;
 				width: 100%;
 				border-radius: f.rem(20);
@@ -517,6 +532,7 @@ body {
 
 .upcoming-section {
 	margin-bottom: f.rem(50);
+	margin-top: f.rem(50);
 }
 
 .continueWatching-section,
@@ -852,7 +868,7 @@ body {
 		display: none;
 	}
 	.sidebar {
-		position: fixed;
+		position: absolute;
 		top: 0;
 		right: 0;
 		width: 70%;
@@ -869,7 +885,7 @@ body {
 			justify-content: flex-start !important;
 			gap: f.rem(0);
 			padding: f.rem(20) f.rem(10);
-			height: 100%;
+			height: 100vh;
 			.close {
 				width: 100%;
 				display: flex;
