--- a/src/App.scss
+++ b/src/App.scss
@@ -93,7 +93,7 @@ body {
 		"aside main main"
 		"aside main main"
 		"aside footer footer";
-	grid-template-columns: repeat(2, f.rem(250) auto);
+	grid-template-columns: f.rem(250) 1fr;
 	@include breakpoint-max(medium) {
 		grid-template-areas:
 			"header header header"
@@ -105,12 +105,11 @@ body {
 		grid-template-areas: "header", "main", "footer";
 		grid-template-columns: 1fr;
 		width: 98%;
-
 		margin-inline: auto;
 	}
 
 	.header {
-		height: 100%;
+		height: f.rem(80);
 		width: 100%;
 		grid-area: header;
 		margin-bottom: f.rem(20);
@@ -418,7 +417,7 @@ body {
 	display: grid;
 	gap: f.rem(20);
 	grid-template-columns: 1fr;
-	grid-template-rows: repeat(3, auto) 400px;
+	grid-template-rows: auto;
 	user-select: none;
 }
 
