--- a/src/App.scss
+++ b/src/App.scss
@@ -368,6 +368,7 @@ body {
 			flex-direction: column;
 			align-items: center;
 			padding: f.rem(20) 0;
+			text-align: center;
 			.icons {
 				margin-bottom: f.rem(20);
 				display: flex;
@@ -453,10 +454,7 @@ body {
 			gap: f.rem(20);
 			margin-bottom: f.rem(30);
 			.movie {
-				max-width: f.rem(400);
-				@include breakpoint-max(small) {
-					max-width: 100%;
-				}
+				max-width: f.rem(360);
 				margin-inline: auto;
 				width: 100%;
 				border-radius: f.rem(20);
