--- a/src/App.scss
+++ b/src/App.scss
@@ -124,7 +124,6 @@ body {
 		height: f.rem(80);
 		width: 100%;
 		grid-area: header;
-		margin-bottom: f.rem(20);
 		position: sticky;
 		top: 0;
 		left: 0;
@@ -1078,3 +1077,77 @@ body {
 }
 
 // ===========singleMovie-section==================
+.singleMovie-section {
+	display: grid;
+
+	@include breakpoint-max(medium) {
+		grid-column: 1/-1;
+	}
+	.intro-section {
+		display: grid;
+		width: 100%;
+
+		.container2 {
+			display: grid;
+			// grid-template-columns: f.rem(300) auto;
+			padding-block: f.rem(15);
+			grid-template-columns: repeat(auto-fit, minmax(f.rem(250), 1fr));
+
+			gap: f.rem(30);
+			height: 100%;
+			width: min(100% - f.rem(25), f.rem(900));
+			margin-inline: auto;
+			align-content: center;
+			margin-inline: auto;
+
+			.left-card {
+				height: f.rem(400);
+				border-radius: f.rem(25);
+				margin-inline: auto;
+				max-width: f.rem(300);
+				width: 100%;
+				img {
+					border-radius: f.rem(25);
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
+			.right-card {
+				display: grid;
+				place-content: center;
+				color: var(--white2);
+				p {
+					font-weight: 200;
+					font-size: f.rem(14);
+					line-height: 1.5;
+				}
+				button {
+					cursor: pointer;
+					padding: f.rem(12) f.rem(20);
+					color: var(--white2);
+					border-radius: f.rem(10);
+					border: none;
+					font-size: f.rem(15);
+					transition: 0.3s ease;
+					background-color: var(--scrollbar3);
+					margin-top: f.rem(20);
+					&:hover {
+						transform: scale(1.03);
+					}
+					&:hover,
+					&:active {
+						opacity: 0.86;
+						transition: opacity 0.2s ease;
+					}
+
+					&:active {
+						opacity: 1;
+						transition: opacity 0.2s ease;
+						transform: scale(0.96);
+					}
+				}
+			}
+		}
+	}
+}
