--- a/src/App.scss
+++ b/src/App.scss
@@ -30,12 +30,15 @@ p {
 	--white3: #fff;
 	--scrollbar2: purple;
 	--loading: #fff;
+	--trailer: #ec3d08c0;
 }
 
 .lightMode {
 	--scrollbar3: rgb(146, 39, 146);
 	--body-color: #fff;
 	--white: #000;
+	--trailer: #ec2a08c0;
+
 	--scrollbar: #ec3c08;
 	--dark-brown2: linear-gradient(
 		to left,
@@ -704,6 +707,12 @@ body {
 						}
 					}
 					.trailer {
+						background-color: var(--trailer);
+						&:hover {
+							transform: scale(1.03);
+						}
+					}
+					.more {
 						background-color: var(--scrollbar3);
 						&:hover {
 							transform: scale(1.03);
@@ -834,6 +843,7 @@ body {
 					justify-content: flex-start;
 					gap: f.rem(20);
 					width: 100%;
+
 					@include breakpoint-max(small) {
 						flex-direction: column;
 						gap: f.rem(10);
@@ -859,8 +869,15 @@ body {
 							transform: scale(0.96);
 						}
 					}
+
 					.trailer {
 						background-color: var(--scrollbar3);
+						&:hover {
+							transform: scale(1.03);
+						}
+					}
+					.more {
+						background-color: var(--trailer);
 						&:hover {
 							transform: scale(1.03);
 						}
@@ -1147,6 +1164,62 @@ body {
 						transform: scale(0.96);
 					}
 				}
+			}
+		}
+	}
+}
+
+// ===========similarMovies============
+.similarMovies-section {
+	margin-top: f.rem(50);
+	h2 {
+		margin-bottom: f.rem(30);
+		color: var(--white);
+		font-weight: 400;
+		font-size: $font-larger;
+		text-align: left;
+		@include breakpoint-max(v-small) {
+			font-size: $font-large;
+		}
+	}
+	.container3 {
+		width: min(100% - f.rem(20), f.rem(1200));
+		margin-inline: auto;
+		.parent-container {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(f.rem(200), 1fr));
+			gap: f.rem(15);
+			.movieCard {
+				.img {
+					width: 100%;
+					img {
+						width: 100%;
+					}
+				}
+			}
+		}
+		button {
+			max-width: f.rem(200);
+			display: block;
+			margin-top: f.rem(20);
+			width: 100%;
+			margin-inline: auto;
+			padding: f.rem(15) f.rem(20);
+			font-size: f.rem(17);
+			transition: background 0.25s ease-in;
+			box-shadow: 1rem 0 1rem -1rem rgba(0, 0, 0, 0.3);
+			border: f.rem(1) solid white !important;
+			background-color: var(--white) !important;
+			color: var(--filter) !important;
+			&:active {
+				transform: scale(1.03);
+				transition: 0.1s ease;
+			}
+			&:hover {
+				background-color: rgba(97, 32, 182, 0.788) !important;
+				box-shadow: 1rem 1rem 1rem -1rem rgba(87, 0, 128, 0.568);
+				border: f.rem(1) solid var(--body-color) !important;
+				color: aliceblue !important;
 			}
 		}
 	}
