--- a/src/App.scss
+++ b/src/App.scss
@@ -243,7 +243,7 @@ body {
 		left: 0;
 		height: 100vh;
 		z-index: 99;
-		box-shadow: 0px 1rem 2rem -1rem rgba(0, 0, 0, 0.3);
+		box-shadow: inset 1rem 0rem 2rem -1rem rgba(0, 0, 0, 0.1);
 
 		@include breakpoint-max(medium) {
 			display: none;
